--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
+    "connected-react-router": "^5.0.1",
     "drizzle": "^1.2.4",
     "drizzle-react": "^1.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
