--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
